# companella

./: .gitmodules  CONTRIBUTING.md  Companella.sln  LICENSE  README.md  build.ps1  dan_model.onnx  dans.json  mapping.sln  training-data.json
.github/: FUNDING.yml
.github/workflows/: build-release.yml  version-bump.yml
Companella/: Companella.csproj  CompanellaGame.cs  Program.cs  SplashForm.cs  app.manifest  version.txt
Companella/Components/: AnalyticsSettingsPanel.cs  AppFooter.cs  BackgroundDisplay.cs  BpmFactorToggle.cs  BulkRateChangerPanel.cs  CustomTitleBar.cs  DanLevelSelector.cs  DropZone.cs  FunctionButton.cs  FunctionButtonPanel.cs  KeybindConfigPanel.cs  LinkText.cs  LoadingOverlay.cs  MapIndexingPanel.cs  MapInfoDisplay.cs  MapRecommendationPanel.cs  MarathonCreatorPanel.cs  MarqueeText.cs  MinaCalcVersionPanel.cs  ModSelectionPanel.cs  MsdChart.cs  OffsetInputPanel.cs  OverlayModePanel.cs  OverlayPositionPanel.cs  PatternDisplay.cs  RateChangerPanel.cs  ReplayAnalysisSettingsPanel.cs  ResultsOverlayWindow.cs  ScaledContentContainer.cs  ScoreMigrationPanel.cs  SessionAutoStartPanel.cs  SessionChart.cs  SessionHistoryChart.cs  SessionHistoryPanel.cs  SessionPlannerPanel.cs  SessionTrackerPanel.cs  SkillsAnalysisPanel.cs  SkillsOverTimeChart.cs  SplitTabContainer.cs  StatusDisplay.cs  (+6 more)
Companella/Models/: BaseMod.cs  BpmFactor.cs  BpmResult.cs  DanConfiguration.cs  ExampleMod.cs  HitObject.cs  IMod.cs  IndexedMap.cs  MapClassification.cs  MapComparisonData.cs  MapRecommendation.cs  MapSearchCriteria.cs  MarathonEntry.cs  ModContext.cs  ModResult.cs  MsdResult.cs  NoLNMod.cs  OsuFile.cs  Pattern.cs  PatternAnalysisResult.cs  RecommendationFocus.cs  SessionPlan.cs  SessionPlayResult.cs  SkillsTrendResult.cs  StoredSession.cs  TimingDeviation.cs  TimingPoint.cs  TrainingData.cs  UpdateInfo.cs  UserSettings.cs
Companella/Properties/: AssemblyInfo.cs
Companella/Screens/: MainScreen.cs  TrainingScreen.cs
Companella/Services/: AptabaseService.cs  AudioExtractor.cs  BeatmapApiService.cs  BeatmapIndexer.cs  BpmAnalyzer.cs  BpmCalculator.cs  DanConfigurationService.cs  DataPaths.cs  GlobalHotkeyService.cs  HitErrorReaderService.cs  HitObjectSerializer.cs  InterludeDifficultyService.cs  Logger.cs  ManipFactorCalculator.cs  MapClassifier.cs  MapMmrCalculator.cs  MapRecommendationService.cs  MapsDatabaseService.cs  MarathonCreatorService.cs  MessageOnlyWindow.cs  ModService.cs  MsdAnalyzer.cs  OffsetChanger.cs  OsuFileParser.cs  (+21 more)
CompanellaInstaller/: CompanellaInstaller.csproj  InstallerForm.cs  InstallerService.cs  Program.cs
CompanellaTools/: bpm.py  requirements-bpm.txt
CompanellaTools/minacalc-rs/: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
CompanellaTools/minacalc-rs-505/: Cargo.toml  README.md  build.rs
CompanellaTools/minacalc-rs-505/c_code/: API.h
CompanellaTools/minacalc-rs-505/examples/: basic_usage.rs  osu.rs
CompanellaTools/minacalc-rs-505/src/: error.rs  hashmap.rs  thread.rs  utils.rs
CompanellaTools/minacalc-rs/assets/: 4K.osu
CompanellaTools/minacalc-rs/c_code/: API.cpp  API.h
CompanellaTools/minacalc-rs/c_code/MinaCalc/: MinaCalc.cpp  Ulbu.h  UlbuAcolytes.h
CompanellaTools/minacalc-rs/c_code/MinaCalc/Agnostic/: IntervalInfo.h
CompanellaTools/minacalc-rs/examples/: basic_usage.rs  rox.rs
CompanellaTools/minacalc-rs/src/: bindings.rs  error.rs  lib.rs  rox.rs  wrapper.rs
CompanellaTools/msd-calculator/: Cargo.toml
CompanellaTools/msd-calculator/src/: main.rs
OsuMappingHelper/: OsuMappingHelper.csproj  OsuMappingHelperGame.cs  Program.cs  SplashForm.cs  version.txt
msd-calculator-505/: Cargo.toml  README.md
msd-calculator-505/src/: main.rs
(+146 files in other folders)
