[package]
name = "minacalc-rs"
version = "0.3.0"
edition = "2021"
description = "Rust bindings for MinaCalc C++ library (Etterna rating calculator)"
license = "MIT"
authors = ["Glubus <mael.chevalleraud@gmail.com>"]
repository = "https://github.com/Glubus/minacalc-rs"
keywords = ["rhythm-game", "difficulty", "stepmania", "etterna", "minacalc"]
categories = ["game-development"]

[lib]
name = "minacalc_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["hashmap"]
thread = ["dep:parking_lot", "dep:once_cell"]
hashmap = []
rox = []
utils = []

[dependencies]
parking_lot = { version = "0.12", optional = true }
once_cell = { version = "1.19", optional = true }
rhythm-open-exchange = "0.2.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.72"

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "rox"
path = "examples/rox.rs"
required-features = ["rox", "hashmap"]

[[example]]
name = "utils_example"
path = "examples/utils_example.rs"
required-features = ["utils"]
